initializing board and printing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Sodoku)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp d_except.h d_matrix.h Board.cpp Board.h)
+set(SOURCE_FILES main.cpp d_except.h d_matrix.h Board.cpp Board.h Cell.cpp Cell.h)
 add_executable(Sodoku ${SOURCE_FILES})
