--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.6)
-project(Sodoku)
+project(Sudoku)
 
 set(CMAKE_CXX_STANDARD 11)
 
 set(SOURCE_FILES main.cpp d_except.h d_matrix.h Board.cpp Board.h Cell.cpp Cell.h)
-add_executable(Sodoku ${SOURCE_FILES})
+add_executable(Sudoku ${SOURCE_FILES})
